# ZeroDayML-Paper1

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: daily_progress.md  experiment_log.md  project_plan.md  research_notes.md
models/: README.md
notebooks/: README.md
references/: README.md
reports/: README.md
reports/figures/: README.md
reports/paper/: README.md
reports/tables/: README.md
scripts/: README.md
src/: README.md  __init__.py
tests/: README.md
