[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodayml-paper1"
version = "0.1.0"
description = "Behavior-Based Zero-Day Intrusion Detection using Unsupervised Machine Learning for Enterprise and IoT Networks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "<Your Full Name>", email = "<your-email@domain.com>" }
]
keywords = [
    "intrusion-detection",
    "zero-day",
    "anomaly-detection",
    "unsupervised-learning",
    "network-security",
    "iot-security",
    "autoencoder",
    "machine-learning",
    "cybersecurity"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security"
]
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "plotly>=5.18,<6.0",
    "scikit-learn>=1.4,<2.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.1,<5.0",
    "imbalanced-learn>=0.12",
    "tensorflow>=2.15,<3.0",
    "keras>=3.0",
    "umap-learn>=0.5.5",
    "shap>=0.44",
    "lime>=0.2.0.1",
    "missingno>=0.5.2",
    "yellowbrick>=1.5",
    "joblib>=1.3",
    "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
    "black>=24.1",
    "flake8>=7.0",
    "isort>=5.13",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.28"
]

[project.urls]
Repository = "https://github.com/<your-username>/ZeroDayML-Paper1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [".venv", "build", "dist", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
